--- a/Mod/gradle.properties
+++ b/Mod/gradle.properties
@@ -4,8 +4,8 @@ org.gradle.daemon=false
 org.gradle.debug=false
 
 # Parchment parameter mappings
-parchment_minecraft_version=1.21
-parchment_mappings_version=2024.07.28
+parchment_minecraft_version=1.21.1
+parchment_mappings_version=2024.11.17
 
 # The Minecraft version must agree with the Neo version to get a valid artifact
 minecraft_version=1.21.1
@@ -33,10 +33,10 @@ loader_version_range=[5.3,)
 #
 # Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
 # Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
-mapping_channel=official
+mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.21
+mapping_version=2024.11.17-1.21.1
 
 
 ## Mod Properties
