--- a/Mod/gradle.properties
+++ b/Mod/gradle.properties
@@ -47,7 +47,7 @@ mod_id=euclideanlogistics
 # The human-readable display name for the mod.
 mod_name=Euclidean Logistics Main
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
+mod_license=GNU AGPL v3
 # The mod version. See https://semver.org/
 mod_version=0.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
