--- a/.github/workflows/qodana_code_quality.yml
+++ b/.github/workflows/qodana_code_quality.yml
@@ -23,6 +23,7 @@ jobs:
         uses: JetBrains/qodana-action@v2025.1
         with:
           pr-mode: false
+          args: --source-directory,Mod
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1886573814 }}
           QODANA_ENDPOINT: 'https://qodana.cloud'
